Fix version number position and increase size of nav button on mobile

--- a/main.css
+++ b/main.css
@@ -102,10 +102,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     margin-top: 50px;
     font-size: 50px;
+    margin-bottom: 5px;
 }
 
 h2 {
-    margin-top: 70px;
+    margin-top: 40px;
     font-size: 30px;
 }
 
@@ -168,8 +169,8 @@ th, td {
     padding-bottom: 4px;
     text-decoration: none;
     transition-duration: 0.3s;
-    top: 100px;
-    position:absolute;
+    /* top: 100px; */
+    position:relative;
     font-size: 12px;
     color: rgb(94, 94, 94);
 }
